# wncp

./: .gitignore  README
first/: first.grc  top_block.py
gr-prototype/: CMakeLists.txt  MANIFEST.md
gr-prototype/cmake/Modules/: prototypeConfig.cmake
gr-prototype/docs/: README.prototype
gr-prototype/docs/doxygen/: Doxyfile.in
gr-prototype/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-prototype/grc/: CMakeLists.txt  prototype_brain_cb.xml  prototype_protocol.xml
gr-prototype/include/prototype/: CMakeLists.txt  api.h  brain_cb.h  protocol.h
gr-prototype/lib/: CMakeLists.txt  brain_cb_impl.cc  brain_cb_impl.h  protocol_impl.cc  protocol_impl.h  qa_brain_cb.cc  qa_brain_cb.h  qa_prototype.cc  qa_prototype.h  test_prototype.cc
gr-prototype/music/: convert.sh  play.sh  sent.raw
gr-prototype/python/: CMakeLists.txt  __init__.py  qa_brain_cb.py  qa_protocol.py
gr-prototype/swig/: CMakeLists.txt  prototype_swig.i
progress/: Makefile  progress.aux  progress.out  progress.tex
proposal/: Makefile  proposal.aux  proposal.out  proposal.tex
radio_waves/: Makefile
radio_waves/_bit/: final.bgn  final.bit  final.drc  final.isc  final.rbt  radio_waves.ut  xlnx_auto_0.ise
radio_waves/_bit/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/STE/bitgen/: regkeys
radio_waves/_bit/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_map/: radio_waves.map  radio_waves.mrp  radio_waves.ncd  radio_waves.ngm  radio_waves.pcf  tlc_map.xrpt  xlnx_auto_0.ise
radio_waves/_map/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_ngd/: radio_waves.bld  radio_waves.ngd  radio_waves_ngdbuild.xrpt  xlnx_auto_0.ise
radio_waves/_ngd/_ngo/: netlist.lst
radio_waves/_ngd/xlnx_auto_0_xdb/: cst.xbcd
radio_waves/_ngd/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_par/: radio_waves.ncd  radio_waves.pad  radio_waves.par  radio_waves.ptwx  radio_waves.unroutes  radio_waves_pad.csv  radio_waves_pad.txt  tlc_par.xrpt  xlnx_auto_0.ise
radio_waves/_par/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_trc/: radio_waves.twr  radio_waves.twx  xlnx_auto_0.ise
radio_waves/_trc/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_upl/: music.raw  upload
radio_waves/_xst/: radio_waves.ngc  radio_waves.ngc_xst.xrpt  radio_waves.prj  radio_waves.srp  radio_waves.xst  xlnx_auto_0.ise
radio_waves/_xst/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
radio_waves/_xst/xst/work/: hdllib.ref  hdpdeps.ref
radio_waves/_xst/xst/work/sub00/: vhpl00.vho  vhpl01.vho  vhpl02.vho
radio_waves/src/: radio_waves.ucf  radio_waves3.ucf  tlc.old  tlc.vhd  upload.c
scripts/: mount.sh
second/: temp.grc  top_block.py
third/: draw.grc  draw_block.py  receive.grc  top_block.py
(+5 files in other folders)
